# TFG_MMP_SistemasElectr-nicos

./: README.md
Firmware/TFG_inside_greenhouse_s3/: .cproject
Firmware/TFG_inside_greenhouse_s3_Soil/: .project  sdkconfig
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/: .cproject  .project  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/components/ui/: .cproject  CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/components/ui/screens/: ui_AMBIENTES1.c  ui_AMBIENTES2.c  ui_BalanceDiarioS1.c  ui_BalanceDiarioS2.c  ui_CONFIGURACION.c  ui_GraficaTempHumS1.c  ui_GraficaTempHumS2.c  ui_GraficasAmbiente.c  ui_Menu_Inicio.c  ui_Nebulizar.c  ui_RANGOSDPVS1MAX.c  ui_RANGOSDPVS1MIN.c  ui_RANGOSDPVS2MAX.c  ui_RANGOSDPVS2MIN.c  ui_RANGOSSectoresDPV.c  ui_SECTORES.c  ui_SUELO.c  ui_ScreenINFODPV.c
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/main/: CMakeLists.txt  idf_component.yml  main.c
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/main/my_mqtt/: my_mqtt.c
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/main/my_mqtt/include/: my_mqtt.h
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/main/my_wifi/: my_wifi.c
Firmware/TFG_relays_definitivo_v3_2logic_Pantalla/main/my_wifi/include/: my_wifi.h
PCBs/nodo_central/: fp-info-cache  fp-lib-table  libreria_simbolos.bak  nodo_central-B_Cu.gbr  nodo_central-B_Mask.gbr  nodo_central-B_Paste.gbr  nodo_central-B_Silkscreen.gbr  nodo_central-Edge_Cuts.gbr  nodo_central-F_Cu.gbr  sym-lib-table  (+8 more)
(+88 files in other folders)
